Added package information and READMEs and LICENSEs of libraries

--- a/FPLite.Extensions/FPLite.Extensions.csproj
+++ b/FPLite.Extensions/FPLite.Extensions.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <PackageId>PauloJDCM.FPLite.Idiomatic</PackageId>
+        <Version>1.0.0</Version>
+        <Author>Paulo Miranda</Author>
+        <Product>FPLite.Idiomatic</Product>
     </PropertyGroup>
 
     <ItemGroup>
