--- a/FPLite/FPLite.csproj
+++ b/FPLite/FPLite.csproj
@@ -5,6 +5,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite</RootNamespace>
+        <PackageId>PauloJDCM.FPLite</PackageId>
+        <Version>1.0.0</Version>
+        <Author>Paulo Miranda</Author>
+        <Product>FPLite</Product>
     </PropertyGroup>
 
 </Project>
