--- a/FPLite.Idiomatic/FPLite.Idiomatic.csproj
+++ b/FPLite.Idiomatic/FPLite.Idiomatic.csproj
@@ -4,10 +4,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <PackageId>PauloJDCM.FPLite.Extensions</PackageId>
+        <PackageId>PauloJDCM.FPLite.Idiomatic</PackageId>
         <Version>1.0.0</Version>
         <Author>Paulo Miranda</Author>
-        <Product>FPLite.Extensions</Product>
+        <Product>FPLite.Idiomatic</Product>
+        <ApplicationIcon>FPLite_Idiomatic.png</ApplicationIcon>
     </PropertyGroup>
 
 </Project>
