--- a/FPLite/FPLite.csproj
+++ b/FPLite/FPLite.csproj
@@ -6,9 +6,20 @@
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite</RootNamespace>
         <PackageId>PauloJDCM.FPLite</PackageId>
-        <Version>1.0.0</Version>
-        <Author>Paulo Miranda</Author>
+        <Version>1.0.1</Version>
+        <Authors>Paulo Miranda</Authors>
         <Product>FPLite</Product>
+        <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+        <RepositoryUrl>https://github.com/PauloJDCM/FPLite</RepositoryUrl>
+        <PackageIcon>FPLite.png</PackageIcon>
+        <PackageReleaseNotes>Added Icon</PackageReleaseNotes>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <None Include="LICENSE.txt" Pack="true" PackagePath="LICENSE.txt"/>
+        <None Include="README.md" Pack="true" PackagePath="README.md"/>
+        <None Include="FPLite.png" Pack="true" PackagePath="FPLite.png"/>
+    </ItemGroup>
 
 </Project>
