--- a/FPLite.Tests/FPLite.Tests.csproj
+++ b/FPLite.Tests/FPLite.Tests.csproj
@@ -2,12 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <LangVersion>8.0</LangVersion>
         <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
-        <RootNamespace>TestProject1</RootNamespace>
+        <RootNamespace>FPLite.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
