--- a/FPLite.Extensions/FPLite.Extensions.csproj
+++ b/FPLite.Extensions/FPLite.Extensions.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
         <Nullable>enable</Nullable>
+        <RootNamespace>FPLite.Extensions</RootNamespace>
         <PackageId>PauloJDCM.FPLite.Extensions</PackageId>
-        <Version>1.0.0</Version>
+        <Version>2.0.0</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite.Extensions</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/PauloJDCM/FPLite</RepositoryUrl>
         <PackageIcon>FPLite_Extensions.png</PackageIcon>
+        <PackageReleaseNotes>Simplified extensions, created extensions for new Result type, added compatibility with Net Standard 2.1.</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
