--- a/FPLite.Idiomatic/FPLite.Idiomatic.csproj
+++ b/FPLite.Idiomatic/FPLite.Idiomatic.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+        <RootNamespace>FPLite.Idiomatic</RootNamespace>
         <Nullable>enable</Nullable>
         <PackageId>PauloJDCM.FPLite.Idiomatic</PackageId>
-        <Version>1.0.0</Version>
+        <Version>2.0.0</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite.Idiomatic</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/PauloJDCM/FPLite</RepositoryUrl>
         <PackageIcon>FPLite_Idiomatic.png</PackageIcon>
+        <PackageReleaseNotes>Added compatibility with Net Standard 2.1.</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
