Added FPLite.Extensions reference to tests project

--- a/FPLite.Tests/FPLite.Tests.csproj
+++ b/FPLite.Tests/FPLite.Tests.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\FPLite.Extensions\FPLite.Extensions.csproj" />
       <ProjectReference Include="..\FPLite\FPLite.csproj" />
     </ItemGroup>
 
