--- a/FPLite.Extensions/FPLite.Extensions.csproj
+++ b/FPLite.Extensions/FPLite.Extensions.csproj
@@ -5,14 +5,14 @@
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite.Extensions</RootNamespace>
         <PackageId>PauloJDCM.FPLite.Extensions</PackageId>
-        <Version>2.0.0</Version>
+        <Version>3.0.0</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite.Extensions</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/PauloJDCM/FPLite</RepositoryUrl>
         <PackageIcon>FPLite_Extensions.png</PackageIcon>
-        <PackageReleaseNotes>Simplified extensions, created extensions for new Result type, added compatibility with Net Standard 2.1.</PackageReleaseNotes>
+        <PackageReleaseNotes>Fixed ResultEnumerableExtensions incorrect method names, added Try methods for Option and Result types.</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
