--- a/FPLite/FPLite.csproj
+++ b/FPLite/FPLite.csproj
@@ -1,18 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
+        <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite</RootNamespace>
         <PackageId>PauloJDCM.FPLite</PackageId>
-        <Version>2.0.1</Version>
+        <Version>3.0.0</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/PauloJDCM/FPLite</RepositoryUrl>
         <PackageIcon>FPLite.png</PackageIcon>
-        <PackageReleaseNotes>Fixed README.</PackageReleaseNotes>
+        <PackageReleaseNotes>Remodeled types for fewer allocations by infering state from type. Removed type functionality that could lead to code smells. Dropped support for .Net Standard.</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
