--- a/FPLite.Extensions/FPLite.Extensions.csproj
+++ b/FPLite.Extensions/FPLite.Extensions.csproj
@@ -5,14 +5,14 @@
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite.Extensions</RootNamespace>
         <PackageId>PauloJDCM.FPLite.Extensions</PackageId>
-        <Version>4.0.0</Version>
+        <Version>4.0.0-alpha</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite.Extensions</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/PauloJDCM/FPLite</RepositoryUrl>
         <PackageIcon>FPLite_Extensions.png</PackageIcon>
-        <PackageReleaseNotes>Updated to use remodeled types. Removed functionality that didn't really add much. Dropped support for .Net Standard.</PackageReleaseNotes>
+        <PackageReleaseNotes>Updated to use remodeled types. Added async support. Dropped support for .Net Standard.</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
