--- a/FPLite/FPLite.csproj
+++ b/FPLite/FPLite.csproj
@@ -5,14 +5,14 @@
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite</RootNamespace>
         <PackageId>PauloJDCM.FPLite</PackageId>
-        <Version>3.0.0</Version>
+        <Version>3.0.0-alpha</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <RepositoryUrl>https://github.com/PauloJDCM/FPLite</RepositoryUrl>
         <PackageIcon>FPLite.png</PackageIcon>
-        <PackageReleaseNotes>Remodeled types for fewer allocations by infering state from type. Removed type functionality that could lead to code smells. Dropped support for .Net Standard.</PackageReleaseNotes>
+        <PackageReleaseNotes>Remodeled types for fewer allocations by using record structs. Removed type functionality that could lead to code smells. Added async support. Dropped support for .Net Standard.</PackageReleaseNotes>
     </PropertyGroup>
 
     <ItemGroup>
