--- a/FPLite.Extensions/FPLite.Extensions.csproj
+++ b/FPLite.Extensions/FPLite.Extensions.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite.Extensions</RootNamespace>
         <PackageId>PauloJDCM.FPLite.Extensions</PackageId>
-        <Version>4.0.0-alpha</Version>
+        <Version>4.0.0</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite.Extensions</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
