--- a/FPLite/FPLite.csproj
+++ b/FPLite/FPLite.csproj
@@ -5,7 +5,7 @@
         <Nullable>enable</Nullable>
         <RootNamespace>FPLite</RootNamespace>
         <PackageId>PauloJDCM.FPLite</PackageId>
-        <Version>3.0.0-alpha</Version>
+        <Version>3.0.0</Version>
         <Authors>Paulo Miranda</Authors>
         <Product>FPLite</Product>
         <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
